[package]
name = "alpha-bleeder"
version = "0.2.0"
authors = ["AmaranthineCodices <AmaranthineCodices@gmail.com>"]
repository = "https://github.com/AmaranthineCodices/alpha-bleeder"
license = "MIT"
description = "Bleeds color from non-transparent pixels to the surrounding transparent pixels."

[dependencies]
image = "0.18.*"
threadpool = "1.7.1"
clap = "2.32.0"
glob = "0.2.11"